--- a/src/assets/css/input.css
+++ b/src/assets/css/input.css
@@ -1,3 +1,55 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap');
+
+:root{
+  /* ### Primary */
+  --cyan: hsl(180, 66%, 49%);
+  --dark-violet: hsl(257, 27%, 26%);
+  --text-white: hsl(0, 0%, 95%);
+
+  /* ### Secondary */
+  --red: hsl(0, 87%, 67%);
+
+  /* ### Neutral */
+  --gray: hsl(0, 0%, 75%);
+  --grayish-Violet: hsl(257, 7%, 63%);
+  --very-dark-blue: hsl(255, 11%, 22%);
+  --very-dark-violet: hsl(260, 8%, 14%);
+
+  /*========== Font and typography ==========*/
+  --body-font: 'Poppins', sans-serif;
+}
+
+body,html{
+  height: 100vh;
+  font-family: var(--body-font);
+}
+
+.btn {
+  display: inline-block;
+  font-weight: 400;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  user-select: none;
+  border: 1px solid transparent;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  transition: all 300ms ease;
+}
+
+.btn:hover{
+  opacity: .5;
+}
+
+.btn-primary{
+  background-color: var(--cyan);
+  color: var(--text-white);
+}
+
+.bg-nav{
+  background-color: var(--dark-violet);
+}
