--- a/src/assets/css/input.css
+++ b/src/assets/css/input.css
@@ -14,7 +14,7 @@
 
   /* ### Neutral */
   --gray: hsl(0, 0%, 75%);
-  --grayish-Violet: hsl(257, 7%, 63%);
+  --grayish-violet: hsl(257, 7%, 63%);
   --very-dark-blue: hsl(255, 11%, 22%);
   --very-dark-violet: hsl(260, 8%, 14%);
 
@@ -27,6 +27,18 @@ body,html{
   font-family: var(--body-font);
 }
 
+h1{
+  color: var(--very-dark-violet);
+}
+
+h2,h3{
+  color: var(--very-dark-blue);
+}
+
+p, a{
+  color: var(--grayish-violet);
+}
+
 .btn {
   display: inline-block;
   font-weight: 400;
@@ -35,7 +47,7 @@ body,html{
   vertical-align: middle;
   user-select: none;
   border: 1px solid transparent;
-  padding: 0.375rem 0.75rem;
+  /* padding: 0.375rem 0.75rem; */
   font-size: 1rem;
   line-height: 1.5;
   transition: all 300ms ease;
