--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -512,6 +512,14 @@ Ensure the default browser behavior of the `hidden` attribute.
   border-width: 0;
 }
 
+.relative {
+  position: relative;
+}
+
+.top-24 {
+  top: 6rem;
+}
+
 .row-start-2 {
   grid-row-start: 2;
 }
@@ -525,6 +533,14 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-right: auto;
 }
 
+.mt-36 {
+  margin-top: 9rem;
+}
+
+.mr-6 {
+  margin-right: 1.5rem;
+}
+
 .ml-3 {
   margin-left: 0.75rem;
 }
@@ -533,12 +549,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-top: 1rem;
 }
 
-.mt-8 {
-  margin-top: 2rem;
+.mt-24 {
+  margin-top: 6rem;
 }
 
-.ml-32 {
-  margin-left: 8rem;
+.mt-8 {
+  margin-top: 2rem;
 }
 
 .block {
@@ -569,16 +585,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   height: 100%;
 }
 
-.w-6 {
-  width: 1.5rem;
-}
-
 .w-full {
   width: 100%;
 }
 
-.w-3\/4 {
-  width: 75%;
+.w-6 {
+  width: 1.5rem;
 }
 
 .w-fit {
@@ -595,8 +607,8 @@ Ensure the default browser behavior of the `hidden` attribute.
   max-width: none;
 }
 
-.grid-cols-2 {
-  grid-template-columns: repeat(2, minmax(0, 1fr));
+.flex-grow {
+  flex-grow: 1;
 }
 
 .flex-col {
@@ -635,12 +647,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   white-space: nowrap;
 }
 
-.rounded-lg {
-  border-radius: 0.5rem;
-}
-
 .rounded-md {
   border-radius: 0.375rem;
+}
+
+.rounded-lg {
+  border-radius: 0.5rem;
 }
 
 .rounded-full {
@@ -666,12 +678,30 @@ Ensure the default browser behavior of the `hidden` attribute.
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.p-14 {
+  padding: 3.5rem;
+}
+
+.p-4 {
+  padding: 1rem;
+}
+
 .p-2 {
   padding: 0.5rem;
 }
 
 .p-8 {
   padding: 2rem;
+}
+
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
+.px-6 {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
 }
 
 .px-2 {
@@ -682,11 +712,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .py-2\.5 {
   padding-top: 0.625rem;
   padding-bottom: 0.625rem;
-}
-
-.py-2 {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
 }
 
 .px-4 {
@@ -718,16 +743,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
-}
-
-.text-7xl {
-  font-size: 4.5rem;
-  line-height: 1;
-}
-
-.text-6xl {
-  font-size: 3.75rem;
-  line-height: 1;
 }
 
 .text-5xl {
@@ -771,6 +786,8 @@ Ensure the default browser behavior of the `hidden` attribute.
   --body-font: 'Poppins', sans-serif;
 }
 
+/* General */
+
 body,html{
   height: 100vh;
   font-family: var(--body-font);
@@ -804,17 +821,32 @@ p, a{
   transition: all 300ms ease;
 }
 
-.btn:hover{
-  opacity: .5;
-}
-
 .btn-primary{
   background-color: var(--cyan);
   color: var(--text-white);
 }
 
+.btn-primary:hover{
+  background-color:hsl(180, 66%, 69%);
+}
+
+/* Navbar */
+
 .bg-nav{
   background-color: var(--dark-violet);
+}
+
+/* Shortener */
+
+.shorten-bg{
+  background: no-repeat;
+  background-color: var(--dark-violet);
+  background-size: cover;
+  background-image: url('../../assets/img/bg-shorten-desktop.svg');
+}
+
+.bg-gray{
+  background-color: var(--text-white)
 }
 
 .hover\:bg-gray-100:hover {
@@ -851,10 +883,6 @@ p, a{
 
   .md\:mt-0 {
     margin-top: 0px;
-  }
-
-  .md\:ml-0 {
-    margin-left: 0px;
   }
 
   .md\:flex {
@@ -921,11 +949,6 @@ p, a{
 
   .md\:p-0 {
     padding: 0px;
-  }
-
-  .md\:px-4 {
-    padding-left: 1rem;
-    padding-right: 1rem;
   }
 
   .md\:text-left {
