--- a/src/assets/css/input.css
+++ b/src/assets/css/input.css
@@ -40,6 +40,7 @@ p, a{
   color: var(--grayish-violet);
 }
 
+/* Presets */
 .btn {
   display: inline-block;
   font-weight: 400;
@@ -48,7 +49,6 @@ p, a{
   vertical-align: middle;
   user-select: none;
   border: 1px solid transparent;
-  /* padding: 0.375rem 0.75rem; */
   font-size: 1rem;
   line-height: 1.5;
   transition: all 300ms ease;
@@ -63,8 +63,35 @@ p, a{
   background-color:hsl(180, 66%, 69%);
 }
 
-/* Navbar */
+.bg-gray{
+  background-color: var(--text-white)
+}
 
+.bg-secondary{
+  background-color: var(--dark-violet);
+}
+
+.text-dark-violet{
+  color: var(--very-dark-violet)
+}
+
+.text-cyan{
+  color: var(--cyan)
+}
+
+.bg-cyan{
+  background-color: var(--cyan);
+}
+
+.link-primary{
+  color: var(--cyan)
+}
+
+.link-primary:hover{
+  color:hsl(180, 66%, 69%);
+}
+
+/* Navbar */
 .bg-nav{
   background-color: var(--dark-violet);
 }
@@ -75,8 +102,4 @@ p, a{
   background-color: var(--dark-violet);
   background-size: cover;
   background-image: url('../../assets/img/bg-shorten-desktop.svg');
-}
-
-.bg-gray{
-  background-color: var(--text-white)
 }
