--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -516,8 +516,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   position: relative;
 }
 
-.top-24 {
-  top: 6rem;
+.bottom-20 {
+  bottom: 5rem;
+}
+
+.top-28 {
+  top: 7rem;
 }
 
 .row-start-2 {
@@ -533,12 +537,13 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-right: auto;
 }
 
-.mt-36 {
-  margin-top: 9rem;
+.my-10 {
+  margin-top: 2.5rem;
+  margin-bottom: 2.5rem;
 }
 
-.mr-6 {
-  margin-right: 1.5rem;
+.mt-36 {
+  margin-top: 9rem;
 }
 
 .ml-3 {
@@ -549,12 +554,24 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-top: 1rem;
 }
 
+.mb-10 {
+  margin-bottom: 2.5rem;
+}
+
 .mt-24 {
   margin-top: 6rem;
 }
 
 .mt-8 {
   margin-top: 2rem;
+}
+
+.mr-4 {
+  margin-right: 1rem;
+}
+
+.mr-6 {
+  margin-right: 1.5rem;
 }
 
 .block {
@@ -581,16 +598,24 @@ Ensure the default browser behavior of the `hidden` attribute.
   height: 1.5rem;
 }
 
+.h-auto {
+  height: auto;
+}
+
+.h-2 {
+  height: 0.5rem;
+}
+
 .h-full {
   height: 100%;
 }
 
-.w-full {
-  width: 100%;
-}
-
 .w-6 {
   width: 1.5rem;
+}
+
+.w-full {
+  width: 100%;
 }
 
 .w-fit {
@@ -599,8 +624,20 @@ Ensure the default browser behavior of the `hidden` attribute.
   width: fit-content;
 }
 
+.w-12 {
+  width: 3rem;
+}
+
+.w-16 {
+  width: 4rem;
+}
+
 .w-\[140\%\] {
   width: 140%;
+}
+
+.min-w-\[7rem\] {
+  min-width: 7rem;
 }
 
 .max-w-none {
@@ -647,12 +684,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   white-space: nowrap;
 }
 
-.rounded-md {
-  border-radius: 0.375rem;
-}
-
 .rounded-lg {
   border-radius: 0.5rem;
+}
+
+.rounded-md {
+  border-radius: 0.375rem;
 }
 
 .rounded-full {
@@ -678,14 +715,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.p-14 {
-  padding: 3.5rem;
-}
-
-.p-4 {
-  padding: 1rem;
-}
-
 .p-2 {
   padding: 0.5rem;
 }
@@ -694,14 +723,20 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding: 2rem;
 }
 
-.py-2 {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
+.p-9 {
+  padding: 2.25rem;
 }
 
-.px-6 {
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
+.p-5 {
+  padding: 1.25rem;
+}
+
+.p-14 {
+  padding: 3.5rem;
+}
+
+.p-4 {
+  padding: 1rem;
 }
 
 .px-2 {
@@ -714,9 +749,19 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-bottom: 0.625rem;
 }
 
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
+}
+
+.px-6 {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
 }
 
 .pr-4 {
@@ -745,9 +790,19 @@ Ensure the default browser behavior of the `hidden` attribute.
   line-height: 1.25rem;
 }
 
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+
 .text-5xl {
   font-size: 3rem;
   line-height: 1;
+}
+
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
 }
 
 .font-semibold {
@@ -756,6 +811,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .font-extrabold {
   font-weight: 800;
+}
+
+.font-normal {
+  font-weight: 400;
 }
 
 .text-gray-500 {
@@ -805,6 +864,8 @@ p, a{
   color: var(--grayish-violet);
 }
 
+/* Presets */
+
 .btn {
   display: inline-block;
   font-weight: 400;
@@ -815,7 +876,6 @@ p, a{
       -ms-user-select: none;
           user-select: none;
   border: 1px solid transparent;
-  /* padding: 0.375rem 0.75rem; */
   font-size: 1rem;
   line-height: 1.5;
   transition: all 300ms ease;
@@ -828,6 +888,34 @@ p, a{
 
 .btn-primary:hover{
   background-color:hsl(180, 66%, 69%);
+}
+
+.bg-gray{
+  background-color: var(--text-white)
+}
+
+.bg-secondary{
+  background-color: var(--dark-violet);
+}
+
+.text-dark-violet{
+  color: var(--very-dark-violet)
+}
+
+.text-cyan{
+  color: var(--cyan)
+}
+
+.bg-cyan{
+  background-color: var(--cyan);
+}
+
+.link-primary{
+  color: var(--cyan)
+}
+
+.link-primary:hover{
+  color:hsl(180, 66%, 69%);
 }
 
 /* Navbar */
@@ -845,10 +933,6 @@ p, a{
   background-image: url('../../assets/img/bg-shorten-desktop.svg');
 }
 
-.bg-gray{
-  background-color: var(--text-white)
-}
-
 .hover\:bg-gray-100:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
@@ -862,6 +946,12 @@ p, a{
 .focus\:ring-2:focus {
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+
+.focus\:ring-1:focus {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
 
