--- a/src/assets/css/input.css
+++ b/src/assets/css/input.css
@@ -1,7 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap');
 
 :root{
   /* ### Primary */
@@ -102,4 +102,13 @@ p, a{
   background-color: var(--dark-violet);
   background-size: cover;
   background-image: url('../../assets/img/bg-shorten-desktop.svg');
+}
+
+/* Boost */
+.boost-bg{
+  background: no-repeat;
+  background-color: var(--dark-violet);
+  background-size: cover;
+  background-image: url('../../assets/img/bg-boost-desktop.svg');
+  background-position: center;
 }
