--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -559,6 +559,22 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-top: 10rem;
 }
 
+.mr-8 {
+  margin-right: 2rem;
+}
+
+.mb-4 {
+  margin-bottom: 1rem;
+}
+
+.mt-2 {
+  margin-top: 0.5rem;
+}
+
+.mr-4 {
+  margin-right: 1rem;
+}
+
 .ml-3 {
   margin-left: 0.75rem;
 }
@@ -571,10 +587,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-bottom: -3rem;
 }
 
-.mb-4 {
-  margin-bottom: 1rem;
-}
-
 .mt-16 {
   margin-top: 4rem;
 }
@@ -585,10 +597,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .mt-24 {
   margin-top: 6rem;
-}
-
-.mr-4 {
-  margin-right: 1rem;
 }
 
 .mr-6 {
@@ -675,6 +683,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .flex-wrap {
   flex-wrap: wrap;
+}
+
+.place-content-between {
+  place-content: space-between;
 }
 
 .place-items-center {
@@ -764,6 +776,11 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding: 1rem;
 }
 
+.py-16 {
+  padding-top: 4rem;
+  padding-bottom: 4rem;
+}
+
 .px-2 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
@@ -848,10 +865,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   font-weight: 700;
 }
 
-.font-light {
-  font-weight: 300;
-}
-
 .font-extrabold {
   font-weight: 800;
 }
@@ -860,14 +873,14 @@ Ensure the default browser behavior of the `hidden` attribute.
   font-weight: 400;
 }
 
-.text-gray-500 {
-  --tw-text-opacity: 1;
-  color: rgb(107 114 128 / var(--tw-text-opacity));
-}
-
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-gray-500 {
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity));
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap');
@@ -905,6 +918,10 @@ h2,h3{
 
 p, a{
   color: var(--grayish-violet);
+}
+
+footer{
+  background-color: var(--very-dark-violet);
 }
 
 /* Presets */
@@ -984,6 +1001,25 @@ p, a{
   background-size: cover;
   background-image: url('../../assets/img/bg-boost-desktop.svg');
   background-position: center;
+}
+
+/* Footer */
+
+.footer_link{
+  transition: color 300ms ease;
+}
+
+.footer_link:hover{
+  color:var(--cyan);
+}
+
+.footer_social svg{
+  fill: #FFF;
+  transition: all 300ms ease;
+}
+
+.footer_social svg:hover{
+  fill:cyan
 }
 
 .hover\:bg-gray-100:hover {
@@ -1114,6 +1150,10 @@ p, a{
 }
 
 @media (min-width: 1024px) {
+  .lg\:mr-28 {
+    margin-right: 7rem;
+  }
+
   .lg\:text-7xl {
     font-size: 4.5rem;
     line-height: 1;
