--- a/src/assets/css/input.css
+++ b/src/assets/css/input.css
@@ -2,6 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap');
+@import '../../components/layout/Spinner/spinner.css';
 
 :root{
   /* ### Primary */
