--- a/src/assets/css/input.css
+++ b/src/assets/css/input.css
@@ -27,6 +27,7 @@
 body,html{
   height: 100vh;
   font-family: var(--body-font);
+  -webkit-tap-highlight-color:  rgba(255, 255, 255, 0); 
 }
 
 h1{
