--- a/src/assets/css/input.css
+++ b/src/assets/css/input.css
@@ -38,7 +38,7 @@ h2,h3{
   color: var(--very-dark-blue);
 }
 
-p, a{
+p{
   color: var(--grayish-violet);
 }
 
@@ -49,13 +49,11 @@ footer{
 /* Presets */
 .btn {
   display: inline-block;
-  font-weight: 400;
   text-align: center;
   white-space: nowrap;
   vertical-align: middle;
   user-select: none;
   border: 1px solid transparent;
-  font-size: 1rem;
   line-height: 1.5;
   transition: all 300ms ease;
 }
@@ -125,6 +123,7 @@ footer{
 
 /* Footer */
 .footer_link{
+  color: var(--gray);
   transition: color 300ms ease;
 }
 
