--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -500,18 +500,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   }
 }
 
-.sr-only {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  padding: 0;
-  margin: -1px;
-  overflow: hidden;
-  clip: rect(0, 0, 0, 0);
-  white-space: nowrap;
-  border-width: 0;
-}
-
 .fixed {
   position: fixed;
 }
@@ -566,6 +554,11 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-right: 1.5rem;
 }
 
+.my-4 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
 .my-10 {
   margin-top: 2.5rem;
   margin-bottom: 2.5rem;
@@ -574,6 +567,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 .my-24 {
   margin-top: 6rem;
   margin-bottom: 6rem;
+}
+
+.mx-4 {
+  margin-left: 1rem;
+  margin-right: 1rem;
 }
 
 .mt-40 {
@@ -620,12 +618,20 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-top: 6rem;
 }
 
+.ml-6 {
+  margin-left: 1.5rem;
+}
+
 .mr-6 {
   margin-right: 1.5rem;
 }
 
 .ml-1 {
   margin-left: 0.25rem;
+}
+
+.mb-6 {
+  margin-bottom: 1.5rem;
 }
 
 .block {
@@ -648,8 +654,8 @@ Ensure the default browser behavior of the `hidden` attribute.
   height: 1.5rem;
 }
 
-.h-96 {
-  height: 24rem;
+.h-\[23rem\] {
+  height: 23rem;
 }
 
 .h-0 {
@@ -690,8 +696,8 @@ Ensure the default browser behavior of the `hidden` attribute.
   width: 4rem;
 }
 
-.w-\[140\%\] {
-  width: 140%;
+.w-\[133\%\] {
+  width: 133%;
 }
 
 .w-2\/3 {
@@ -716,6 +722,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .flex-wrap {
   flex-wrap: wrap;
+}
+
+.place-content-center {
+  place-content: center;
 }
 
 .place-content-between {
@@ -789,10 +799,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.p-2 {
-  padding: 0.5rem;
-}
-
 .p-8 {
   padding: 2rem;
 }
@@ -818,14 +824,14 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-bottom: 4rem;
 }
 
-.py-2 {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-}
-
 .px-6 {
   padding-left: 1.5rem;
   padding-right: 1.5rem;
+}
+
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 
 .px-4 {
@@ -836,6 +842,14 @@ Ensure the default browser behavior of the `hidden` attribute.
 .py-12 {
   padding-top: 3rem;
   padding-bottom: 3rem;
+}
+
+.pb-2 {
+  padding-bottom: 0.5rem;
+}
+
+.pt-4 {
+  padding-top: 1rem;
 }
 
 .pr-4 {
@@ -864,6 +878,11 @@ Ensure the default browser behavior of the `hidden` attribute.
   line-height: 1.25rem;
 }
 
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
 .text-4xl {
   font-size: 2.25rem;
   line-height: 2.5rem;
@@ -874,14 +893,13 @@ Ensure the default browser behavior of the `hidden` attribute.
   line-height: 1.75rem;
 }
 
-.text-5xl {
-  font-size: 3rem;
-  line-height: 1;
+.text-4xl2 {
+  font-size: 2.5rem;
 }
 
-.text-lg {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem;
 }
 
 .font-semibold {
@@ -964,7 +982,7 @@ h2,h3{
   color: var(--very-dark-blue);
 }
 
-p, a{
+p{
   color: var(--grayish-violet);
 }
 
@@ -976,7 +994,6 @@ footer{
 
 .btn {
   display: inline-block;
-  font-weight: 400;
   text-align: center;
   white-space: nowrap;
   vertical-align: middle;
@@ -984,7 +1001,6 @@ footer{
       -ms-user-select: none;
           user-select: none;
   border: 1px solid transparent;
-  font-size: 1rem;
   line-height: 1.5;
   transition: all 300ms ease;
 }
@@ -1058,6 +1074,7 @@ footer{
 /* Footer */
 
 .footer_link{
+  color: var(--gray);
   transition: color 300ms ease;
 }
 
@@ -1074,6 +1091,11 @@ footer{
   fill:cyan
 }
 
+.hover\:text-gray-300:hover {
+  --tw-text-opacity: 1;
+  color: rgb(209 213 219 / var(--tw-text-opacity));
+}
+
 .focus\:outline-none:focus {
   outline: 2px solid transparent;
   outline-offset: 2px;
@@ -1083,6 +1105,12 @@ footer{
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+
+@media (min-width: 640px) {
+  .sm\:w-60 {
+    width: 15rem;
+  }
 }
 
 @media (min-width: 768px) {
@@ -1132,9 +1160,18 @@ footer{
     grid-row-start: auto;
   }
 
+  .md\:m-0 {
+    margin: 0px;
+  }
+
   .md\:mx-auto {
     margin-left: auto;
     margin-right: auto;
+  }
+
+  .md\:mx-0 {
+    margin-left: 0px;
+    margin-right: 0px;
   }
 
   .md\:ml-4 {
@@ -1143,6 +1180,14 @@ footer{
 
   .md\:mt-0 {
     margin-top: 0px;
+  }
+
+  .md\:mb-0 {
+    margin-bottom: 0px;
+  }
+
+  .md\:ml-0 {
+    margin-left: 0px;
   }
 
   .md\:flex {
@@ -1171,6 +1216,18 @@ footer{
 
   .md\:w-3\/4 {
     width: 75%;
+  }
+
+  .md\:w-\[140\%\] {
+    width: 140%;
+  }
+
+  .md\:w-32 {
+    width: 8rem;
+  }
+
+  .md\:w-\[8\.2rem\] {
+    width: 8.2rem;
   }
 
   .md\:grow {
@@ -1238,17 +1295,23 @@ footer{
     line-height: 1.25rem;
   }
 
-  .md\:font-medium {
-    font-weight: 500;
+  .md\:text-gray-400 {
+    --tw-text-opacity: 1;
+    color: rgb(156 163 175 / var(--tw-text-opacity));
+  }
+
+  .md\:text-gray-violet {
+    --tw-text-opacity: 1;
+    color: rgb(158 154 167 / var(--tw-text-opacity));
   }
 
   .md\:transition-none {
     transition-property: none;
   }
 
-  .md\:hover\:text-gray-900:hover {
+  .md\:hover\:text-violet-dark:hover {
     --tw-text-opacity: 1;
-    color: rgb(17 24 39 / var(--tw-text-opacity));
+    color: rgb(35 33 39 / var(--tw-text-opacity));
   }
 }
 
