--- a/src/components/layout/Spinner/spinner.css
+++ b/src/components/layout/Spinner/spinner.css
@@ -1,12 +1,10 @@
 .lds-ellipsis {
-  /* display: inline-block; */
   position: relative;
   width: 80px;
-  bottom: .5rem;
 }
 .lds-ellipsis div {
   position: absolute;
-  top: 33px;
+  /* top: 33px; */
   width: 13px;
   height: 13px;
   border-radius: 50%;
